Add inline text color

--- a/tdp-template-1.html
+++ b/tdp-template-1.html
@@ -94,7 +94,7 @@
 
 
                 <!-- Body copy -->
-                <p>
+                <p style="color: #000000;">
                     To keep your account secure, you need to update your password. Use the link below to reset your password, after which you can log in as usual.
                 </p>
 
