--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>TDP Email Templates</h1>
 <ul>
   <li>
-    <a href="tdp-template-1.html">#1814 – Request for access to TDP has been submitted</a>
+    <a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a>
   </li>
 </ul>
 </body>
