--- a/request-for-access.html
+++ b/request-for-access.html
@@ -83,7 +83,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Email Heading 1
+                Your TDP access request has been submitted
             </h1>
         </header>
 
@@ -95,7 +95,18 @@
 
                 <!-- Body copy -->
                 <p style="color: #000000;">
-                    To keep your account secure, you need to update your password. Use the link below to reset your password, after which you can log in as usual.
+                  Dear [FirstName],
+
+Welcome to the TANF Data Portal (TDP)!
+
+We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.
+
+You can also track the status of your request by logging in to TDP. For more information, please visit our FAQ pages.
+
+If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="TANFData@acf.hhs.gov"></a>
+
+Sincerely/ Thanks,
+TDP Team
                 </p>
 
                 <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
