--- a/request-for-access.html
+++ b/request-for-access.html
@@ -95,18 +95,18 @@
 
                 <!-- Body copy -->
                 <p style="color: #000000;">
-                  Dear [FirstName],
+                  <p>Dear [FirstName],</p>
 
-Welcome to the TANF Data Portal (TDP)!
+                  <p>Welcome to the TANF Data Portal (TDP)!</p>
 
-We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.
+                  <p>We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.</p>
 
-You can also track the status of your request by logging in to TDP. For more information, please visit our FAQ pages.
+                  <p>You can also track the status of your request by logging in to TDP. For more information, please visit our FAQ pages.</p>
 
-If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="TANFData@acf.hhs.gov"></a>
+                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="TANFData@acf.hhs.gov"></a></p>
 
-Sincerely/ Thanks,
-TDP Team
+                  <p>Thank you,</p>
+                  TDP Team
                 </p>
 
                 <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
