--- a/request-for-access.html
+++ b/request-for-access.html
@@ -103,7 +103,7 @@
 
                   <p>You can also track the status of your request by logging in to TDP. For more information, please visit our FAQ pages.</p>
 
-                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="TANFData@acf.hhs.gov"></a></p>
+                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank"></a></p>
 
                   <p>Thank you,</p>
                   TDP Team
