--- a/request-for-access.html
+++ b/request-for-access.html
@@ -83,7 +83,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Your TDP access request has been submitted
+                Access Request Submitted
             </h1>
         </header>
 
