--- a/request-for-access.html
+++ b/request-for-access.html
@@ -118,8 +118,8 @@
         <!-- Footer information. Footer is a useful landmark element. -->
         <footer>
             <!-- Since this is a transactional email, you aren't required to include opt-out language. -->
-            <p style="font-size: 16px; font-weight: 400; line-height: 24px; margin-top: 48px; margin: 48px; font-family: Arial;">
-                You received this email because you care about creating more accessible experiences for people.
+            <!-- <p style="font-size: 16px; font-weight: 400; line-height: 24px; margin-top: 48px; margin: 48px; font-family: Arial;">
+                You received this email because you care about creating more accessible experiences for people-->.
             </p>
         </footer>
 
