--- a/request-for-access.html
+++ b/request-for-access.html
@@ -101,7 +101,7 @@
 
                   <p>We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.</p>
 
-                  <p>You can also track the status of your request by logging into TDP. For more information, please visit our FAQ pages.</p>
+                  <p>You can also track the status of your request by logging into TDP. For more information, please visit the <a href="url" target="_blank">Knowledege Center</a>.</p>
 
                   <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
 
