--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <ul>
   <li>
     <a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a>
+    <a href="request-approved.html">#1839 - Request for access to TDP has been approved</a>
   </li>
 </ul>
 </body>
