--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 <body>
 <h1>TDP Email Templates</h1>
 <ul>
-  <li>
-    <a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a>
-    <a href="request-approved.html">#1839 - Request for access to TDP has been approved</a>
-  </li>
+  <li><a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a></li>
+  <li><a href="request-approved.html">#1839 - Request for access to TDP has been approved</a></li>
 </ul>
 </body>
 </html>
