--- a/request-approved.html
+++ b/request-approved.html
@@ -83,7 +83,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Access Request Submitted
+            Request Approved
             </h1>
         </header>
 
@@ -97,11 +97,11 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Welcome to the TANF Data Portal (TDP)!</p>
+                  <p>Congratulations on joining the TANF Data Portal (TDP) as a [UserLevel] from [STTName]!</p>
 
-                  <p>We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.</p>
+                  <p>Now that your request for access has been approved, please visit our Tutorials page to see how everything works in TDP.</p>
 
-                  <p>You can also track the status of your request by logging into TDP. For more information, please visit the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Knowledege Center</a>.</p>
+                  <p>You can also visit our FAQ pages to find answers to commonly asked questions or reach out to our support team via Email with any questions</a>.</p>
 
                   <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
 
