--- a/request-approved.html
+++ b/request-approved.html
@@ -119,7 +119,7 @@
         <footer>
             <!-- Since this is a transactional email, you aren't required to include opt-out language. -->
             <!-- <p style="font-size: 16px; font-weight: 400; line-height: 24px; margin-top: 48px; margin: 48px; font-family: Arial;">
-                You received this email because you care about creating more accessible experiences for people-->.
+                You received this email because you care about creating more accessible experiences for people-->
             </p>
         </footer>
 
