--- a/request-approved.html
+++ b/request-approved.html
@@ -113,7 +113,7 @@
                 <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
                 <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
                 <a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
-                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Reset your password</a>
+                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Let's Get Started</a>
               </div>
         </main>
 
