--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <ul>
   <li><a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a></li>
   <li><a href="request-approved.html">#1839 - Request for access to TDP has been approved</a></li>
+  <li><a href="request-denied.html">#1334 - Request for access to TDP has been denied</a></li>
 </ul>
 </body>
 </html>
