--- a/request-denied.html
+++ b/request-denied.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- The title is useful for screenreaders reading a document. Use your sender name or subject line. -->
-    <title>Request Approved</title>
+    <title>Request Denied</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- Never disable zoom behavior! Fine to set the initial width and scale, but allow users to set their own zoom preferences. -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,13 +97,9 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Congratulations on joining the TANF Data Portal (TDP) as a [UserLevel] from [STTName]!</p>
-
-                  <p>Now that your request for access has been approved, please visit our Tutorials page to see how everything works in TDP.</p>
+                  <p>We regret to inform you that your access request to the TANF Data Portal (TDP) has been denied. Please reach out to your Regional Manager with any questions.</p>
 
                   <p>You can also visit our FAQ pages to find answers to commonly asked questions or reach out to our support team via Email with any questions</a>.</p>
-
-                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
 
                   <p>Thank you,</p>
                   TDP Team
@@ -112,8 +108,8 @@
                 <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                 <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
                 <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
-                <a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
-                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Let's Get Started</a>
+                <!--<a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
+                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Let's Get Started</a> -->
               </div>
         </main>
 
