--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 <h1>TDP Email Templates</h1>
 <ul>
-  <li><a href="request-for-access.html">#1814 – Request for access to TDP has been submitted</a></li>
-  <li><a href="request-approved.html">#1839 - Request for access to TDP has been approved</a></li>
-  <li><a href="request-denied.html">#1334 - Request for access to TDP has been denied</a></li>
+  <li><a href="request-for-access.html" target="_blank">#1814 – Request for access to TDP has been submitted</a></li>
+  <li><a href="request-approved.html" target="_blank">#1839 - Request for access to TDP has been approved</a></li>
+  <li><a href="request-denied.html" target="_blank">#1334 - Request for access to TDP has been denied</a></li>
 </ul>
 </body>
 </html>
