--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <li><a href="request-for-access.html" target="_blank">#1814 – Request for access to TDP has been submitted</a></li>
   <li><a href="request-approved.html" target="_blank">#1839 - Request for access to TDP has been approved</a></li>
   <li><a href="request-denied.html" target="_blank">#1334 - Request for access to TDP has been denied</a></li>
+  <li><a href="inactive-account.html" target="_blank">#1844 - TDP account will soon be deactivated due to inactivity</a></li>
+  <li><a href="deactivated-account.html" target="_blank">#1840 - Account is deactivated</a></li>
+  <li><a href="data-has-been-submitted.html" target="_blank">#1845 - Notify STT Analyst when data for my program has been submitted</a></li>
 </ul>
 </body>
 </html>
