--- a/deactivated-account.html
+++ b/deactivated-account.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- The title is useful for screenreaders reading a document. Use your sender name or subject line. -->
-    <title>Request for Access</title>
+    <title>Account is Deactivated</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- Never disable zoom behavior! Fine to set the initial width and scale, but allow users to set their own zoom preferences. -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,7 +83,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Access Request Submitted
+                Account is Deactivated
             </h1>
         </header>
 
@@ -97,13 +97,13 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Welcome to the TANF Data Portal (TDP)!</p>
+                  <p>Your TDP account is deactivated because you no longer need access to the portal.</p>
 
                   <p>We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.</p>
 
                   <p>You can also track the status of your request by logging into TDP. For more information, please visit the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Knowledege Center</a>.</p>
 
-                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
+                  <p>If this is a mistake or if you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
 
                   <p>Thank you,</p>
                   TDP Team
