--- a/request-for-access.html
+++ b/request-for-access.html
@@ -79,7 +79,7 @@
         <!-- Logo section and header. Headers are useful landmark elements. -->
         <header>
             <a href="https://tdp-frontend-a11y.app.cloud.gov/" style="background-color: #fff !important;">
-                <img src="https://i.imgur.com/1pyeyQ5.png" alt="Administration for Children & Families: Office of Family Assistance" height="auto" width="300">
+                <img src="https://i.imgur.com/ydabPh2.png" alt="TANF Data Portal" height="auto" width="300">
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
@@ -97,13 +97,12 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Welcome to the TANF Data Portal (TDP)!</p>
+                  <p><b>Your request for access has been submitted for review.</b></p>
 
-                  <p>We want to confirm that your request for access to our portal has been successfully submitted. You will receive an email when an Administrator approves or denies your request.</p>
+                  <p>You can view the status of your request by logging into TDP.</p>
 
-                  <p>You can also track the status of your request by logging into TDP. For more information, please visit the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Knowledege Center</a>.</p>
-
-                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
+                  <p><b>Need help?</b></p>
+                  <p>We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
 
                   <p>Thank you,</p>
                   TDP Team
