--- a/request-for-access.html
+++ b/request-for-access.html
@@ -102,7 +102,7 @@
                   <p>You can view the status of your request by logging into TDP.</p>
 
                   <p><b>Need help?</b></p>
-                  <p>We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
+                  We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.
 
                   <p>Thank you,</p>
                   TDP Team
