--- a/request-for-access.html
+++ b/request-for-access.html
@@ -101,7 +101,7 @@
 
                   <p>You can <a href="https://tdp-frontend-a11y.app.cloud.gov/" target="_blank">view the status</a> of your request by logging into TDP.</p>
 
-                  <p><b>Need help?</b></p>
+                  <b>Need help?</b>
                   We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.
 
                   <p>Thank you,</p>
