--- a/request-approved.html
+++ b/request-approved.html
@@ -79,7 +79,7 @@
         <!-- Logo section and header. Headers are useful landmark elements. -->
         <header>
             <a href="https://tdp-frontend-a11y.app.cloud.gov/" style="background-color: #fff !important;">
-                <img src="https://i.imgur.com/1pyeyQ5.png" alt="Administration for Children & Families: Office of Family Assistance" height="auto" width="300">
+                <img src="https://i.imgur.com/ydabPh2.png" alt="TANF Data Portal" height="auto" width="300">
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
@@ -97,23 +97,22 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Congratulations on joining the TANF Data Portal (TDP) as a [UserLevel] from [STTName]!</p>
+                  <p>Congratulations!
+                  Your request for the TANF Data Portal (TDP) is <b>approved</b> and access as a [GroupPermission] from [STTName] <b>has been granted</b>>.</p>
 
-                  <p>Now that your request for access has been approved, please visit our Tutorials page to see how everything works in TDP.</p>
+                  <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
+                  <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
+                  <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
+                  <a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
+                  style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Sign in to TDP</a>
 
-                  <p>You can also visit our FAQ pages to find answers to commonly asked questions or reach out to our support team via Email with any questions</a>.</p>
-
-                  <p>If you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
+                  <b>Need help?</b><br>
+                  We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.
 
                   <p>Thank you,</p>
                   TDP Team
                 </p>
 
-                <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
-                <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
-                <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
-                <a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
-                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Let's Get Started</a>
               </div>
         </main>
 
