--- a/request-approved.html
+++ b/request-approved.html
@@ -98,7 +98,7 @@
                   <p>Dear [FirstName],</p>
 
                   <p>Congratulations!
-                  Your request for the TANF Data Portal (TDP) is <b>approved</b> and access as a [GroupPermission] from [STTName] <b>has been granted</b>>.</p>
+                  Your request for the TANF Data Portal (TDP) is <b>approved</b> and access as a [GroupPermission] from [STTName] <b>has been granted</b>.</p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                   <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
