--- a/request-approved.html
+++ b/request-approved.html
@@ -97,14 +97,15 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Congratulations!
-                  Your request for the TANF Data Portal (TDP) is <b>approved</b> and access as a [GroupPermission] from [STTName] <b>has been granted</b>.</p>
+                  <p>Congratulations!</p>
+
+                  <p>Your request for the TANF Data Portal (TDP) is <b>approved</b> and access as a [GroupPermission] from [STTName] <b>has been granted</b>.</p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                   <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
                   <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
-                  <a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
-                  style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Sign in to TDP</a>
+                  <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
+                  style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Sign in to TDP</a></p>
 
                   <b>Need help?</b><br>
                   We're here for you! Check out the <a href="http://tdp-project-updates.app.cloud.gov/knowledge-center/" target="_blank">Getting Started</a> guide or reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.
