--- a/request-denied.html
+++ b/request-denied.html
@@ -79,7 +79,7 @@
         <!-- Logo section and header. Headers are useful landmark elements. -->
         <header>
             <a href="https://tdp-frontend-a11y.app.cloud.gov/" style="background-color: #fff !important;">
-                <img src="https://i.imgur.com/1pyeyQ5.png" alt="Administration for Children & Families: Office of Family Assistance" height="auto" width="300">
+                <img src="https://i.imgur.com/ydabPh2.png" alt="TANF Data Portal" height="auto" width="300">
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
@@ -97,9 +97,9 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>We regret to inform you that your access request to the TANF Data Portal (TDP) has been denied. Please reach out to your Regional Manager with any questions.</p>
+                  <p>We regret to inform you that your request for access to the TANF Data Portal (TDP) has been denied.</p>
 
-                  <p>You can also visit our FAQ pages to find answers to commonly asked questions or reach out to our support team via Email with any questions</a>.</p>
+                  <p>Please reach out to your Regional Manager with any questions.</p>
 
                   <p>Thank you,</p>
                   TDP Team
