--- a/request-denied.html
+++ b/request-denied.html
@@ -99,7 +99,7 @@
 
                   <p>We regret to inform you that your request for access to the TANF Data Portal (TDP) has been denied.</p>
 
-                  <p>Please reach out to your Regional Manager with any questions.</p>
+                  <p>Please reach out to your TANF Program Manager in your region if you believe this was in error.</p>
 
                   <p>Thank you,</p>
                   TDP Team
