--- a/inactive-account-10days.html
+++ b/inactive-account-10days.html
@@ -99,7 +99,7 @@
 
                   <p>We noticed that you have not logged into the TANF Data Portal (TDP) for almost 180 days.</p>
 
-                  <p>Since your account has been inactive, it’s scheduled to be deactivated in <b>10</b> days on <b>{MM,DD,YYYY}</b> at <b>5PM EST</b>. However, if you are interested in keeping your account, it’s easy! </p>
+                  <p>Since your account has been inactive, it’s scheduled to be deactivated in <b>10 days</b> on <b>{MM,DD,YYYY}</b> at <b>5PM EST</b>. However, if you are interested in keeping your account, it’s easy! </p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                   <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
