--- a/deactivated-account.html
+++ b/deactivated-account.html
@@ -79,7 +79,7 @@
         <!-- Logo section and header. Headers are useful landmark elements. -->
         <header>
             <a href="https://tdp-frontend-a11y.app.cloud.gov/" style="background-color: #fff !important;">
-                <img src="https://i.imgur.com/1pyeyQ5.png" alt="Administration for Children & Families: Office of Family Assistance" height="auto" width="300">
+                <img src="https://i.imgur.com/ydabPh2.png" alt="TANF Data Portal" height="auto" width="300">
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
@@ -97,9 +97,9 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Your TDP account is deactivated because you no longer need access to the portal.</p>
+                  <p>Your  account for the TANF Data Portal (TDP) has been deactivated. </p>
 
-                  <p>If this is a mistake or if you have any questions about your TDP account, please reach out to the TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>.</p>
+                  <p>Please contact TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>for further assistance.</p>
 
                   <p>Thank you,</p>
                   TDP Team
