--- a/deactivated-account.html
+++ b/deactivated-account.html
@@ -99,7 +99,7 @@
 
                   <p>Your  account for the TANF Data Portal (TDP) has been deactivated. </p>
 
-                  <p>Please contact TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a>for further assistance.</p>
+                  <p>Please contact TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a> for further assistance if this was in error.</p>
 
                   <p>Thank you,</p>
                   TDP Team
