--- a/request-for-access.html
+++ b/request-for-access.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p><b>Your request for access has been submitted for review.</b></p>
+                  <p><b>Your request for access to the TANF Data Portal (TDP) has been submitted for review.</b></p>
 
                   <p>You can <a href="https://tdp-frontend-a11y.app.cloud.gov/" target="_blank">view the status</a> of your request by logging into TDP.</p>
 
