--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <li><a href="deactivated-account.html" target="_blank">#1840 - Account is deactivated</a></li>
   <li><a href="data-has-been-submitted.html" target="_blank">#1845 - Notify STT Analyst when data for my program has been submitted</a></li>
     <li><a href="data-has-been-submitted.html" target="_blank">#1845 - Notify STT Analyst when data for my program has been submitted</a></li>
-  <li><a href="access-request-rollup.html" target="_blank">#1840 - Account is deactivated</a></li>
+  <li><a href="access-request-rollup.html" target="_blank">#1336 - Access Request Rollup</a></li>
 
 </ul>
 </body>
