Adds all new email templates

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
   <li><a href="inactive-account-3days.html" target="_blank">#1844 - Inactive Account 3 days</a></li>
   <li><a href="inactive-account-1day.html" target="_blank">#1844 - Inactive Account 1 day</a></li>
   <li><a href="deactivated-account.html" target="_blank">#1840 - Account is deactivated</a></li>
-  <li><a href="data-has-been-submitted.html" target="_blank">#1845 - Notify STT Analyst when data for my program has been submitted</a></li>
-    <li><a href="data-has-been-submitted.html" target="_blank">#1845 - Notify STT Analyst when data for my program has been submitted</a></li>
   <li><a href="access-request-rollup.html" target="_blank">#1336 - Access Request Rollup</a></li>
-
+  <h2>Data Submission Email Variations</h2>
+  <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
+  <li><a href="data-has-been-submitted.html" target="_blank">Notify STT Analyst when data for my program has been submitted (currently implemented)</a></li>
+  <li><a href="error-report-available-low-lift.html" target="_blank">Notify STT Analyst when data for my program has been processed and an error report is available (low lift improvement)</a></li>
+  <ul>
+    <li>Adds CTA to sign into TDP and where to seek more guidance in the knowledge center</li>
+  </ul>
+  <li><a href="error-report-available-highter-lift.html" target="_blank">Notify STT Analyst when data for my program has been processed and an error reports are available (higher lift improvement)</a></li>
+  <ul>
+    <li>Adds aggregation to serve up one email informing the user about all submitted sections rather than 1 email per data file. </li>
+    </ul>
+  <li><a href="error-report-available-highter-lift-button.html" target="_blank">Notify STT Analyst when data for my program has been processed and an error reports are available (higher lift w/ directly linkable quarters)</a></li>
+  <ul>
+    <li>Adds a direct link to the submission history tab of the relevant fiscal year and quarter (requires enhancment to TDP app itself, not just the email notification)</li>
+  </ul>
 </ul>
 </body>
 </html>
